# morpher

./: .env_example  .gitignore  Modelfile  README.md  experimentation.ipynb  main.ipynb  pyproject.toml
morpher/: __init__.py  example.py  main.py
morpher/agent/: __init__.py  core.py  system_state.py
morpher/llm/: __init__.py  ollama.py  ollama_wrapper.py  openai.py  openai_wrapper.py
morpher/prompts/: __init__.py  prompts.py
morpher/tools/: __init__.py  misc.py  misc_tools.py  tool.py  web_search.py
notebooks/: experimentation.ipynb  legacy.ipynb
