[tool.poetry]
name = "dynamic-planner-agent"
version = "0.1.0"
description = "Dynamic agent that can modify the plan of execution on the fly."
authors = ["Snehal Reddy Yelmati <snehalyelmati@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.0.9"
openai = "^1.6.1"
langchain = "^0.0.352"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
